[package]
name = "discrete-dists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "discrete_dists"
path = 'rust/lib.rs'
crate-type = ["cdylib"]

[dependencies]
bincode = "~1.3"
ndarray = { version = "~0.15", features = ["serde"] }
numpy = "~0.21"
pyo3 = "~0.21"
serde = { version = "~1.0", features = ["derive"] }
